Respuesta 2 y Codigo de scrabble

--- a/index.html
+++ b/index.html
@@ -106,10 +106,7 @@
           subsecuencia “DD”.
         </h3>
         <div class="answer">
-          Coloca tu respuesta aquí.<br/>
-          Opcionalmente, puedes poner los archivos con la solución
-          en tu repositorio y poner la dirección del archivo acá.
-          Como por ejemplo: /Código/Scrabble.py
+          El archivo esta en /codigo/scrabble.py
         </div>
       </article>
       <article id="q3">
