Agregado mi nombre a la pagina

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <header>
       <h1>DevLabs__UCB/UCAB</h1>
-      <h2>Tarea 1</h2>
+      <h2>Tarea 1: Jose Montenegro</h2>
     </header>
 
     <section id="explanation">
