Agregados saltos de linea a respuesta 3

--- a/index.html
+++ b/index.html
@@ -117,17 +117,17 @@
         </h3>
         <div class="answer">
          +working directory: Es el directorio local en que se modifican los archivos para luego pasarlos
-          a staging via commit
+          a staging via commit<br>
          +index: Tambien llamado staging area, es un archivo que contiene los cambios que seran agregados
-          en el proximo commit
+          en el proximo commit<br>
          +local repo: Repositorio donde se guardan y manejan todos los commits hechos localmente en el
-          proyecto
+          proyecto<br>
          +remote repo: Repositorio remoto al cual se pueden pushear los commits hechos en el repo local
-          usando git push
+          usando git push<br>
          +dirty working tree: Asi se le dice al working directory cuando tiene modificaciones que aun no
-          se han agregado al index
+          se han agregado al index<br>
          +merge conflict: Ocurre cuando se trata de hacer merge de dos branches que contiene cambios 
-          conflictivos. Para poder hacer commit de estos cambios, se debe resolver dicho conflicto
+          conflictivos. Para poder hacer commit de estos cambios, se debe resolver dicho conflicto<br>
         </div>
       </article>
       <article id="q4">
