Agregados parrafos a respuesta 3

--- a/index.html
+++ b/index.html
@@ -116,18 +116,18 @@
           repo', 'dirty working tree' y 'merge conflict'.
         </h3>
         <div class="answer">
-         +working directory: Es el directorio local en que se modifican los archivos para luego pasarlos
-          a staging via commit<br>
-         +index: Tambien llamado staging area, es un archivo que contiene los cambios que seran agregados
-          en el proximo commit<br>
-         +local repo: Repositorio donde se guardan y manejan todos los commits hechos localmente en el
-          proyecto<br>
-         +remote repo: Repositorio remoto al cual se pueden pushear los commits hechos en el repo local
-          usando git push<br>
-         +dirty working tree: Asi se le dice al working directory cuando tiene modificaciones que aun no
-          se han agregado al index<br>
-         +merge conflict: Ocurre cuando se trata de hacer merge de dos branches que contiene cambios 
-          conflictivos. Para poder hacer commit de estos cambios, se debe resolver dicho conflicto<br>
+         <p>+working directory: Es el directorio local en que se modifican los archivos para luego pasarlos
+          a staging via commit</p>
+         <p>+index: Tambien llamado staging area, es un archivo que contiene los cambios que seran agregados
+          en el proximo commit</p>
+         <p>+local repo: Repositorio donde se guardan y manejan todos los commits hechos localmente en el
+          proyecto</p>
+         <p>+remote repo: Repositorio remoto al cual se pueden pushear los commits hechos en el repo local
+          usando git push</p>
+         <p>+dirty working tree: Asi se le dice al working directory cuando tiene modificaciones que aun no
+          se han agregado al index</p>
+         <p>+merge conflict: Ocurre cuando se trata de hacer merge de dos branches que contiene cambios 
+          conflictivos. Para poder hacer commit de estos cambios, se debe resolver dicho conflicto</p>
         </div>
       </article>
       <article id="q4">
