Colocada una aclaratoria en la respuesta 2

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           subsecuencia “DD”.
         </h3>
         <div class="answer">
-          El archivo esta en /codigo/scrabble.py
+          El archivo esta en /codigo/scrabble.py en la rama gh-pages
         </div>
       </article>
       <article id="q3">
